--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="sort_dialog_highest_rated">Highest Rated</string>
     <string name="sort_dialog_most_rated">Most Rated</string>
 
-    <string name="image_transition">ImageTransition</string>
     <string name="settings">Settings</string>
+    <string name="toprated">TopRated</string>
+    <string name="sort">sort</string>
 </resources>
