--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,11 @@
     <string name="sort_by_title">Sort by</string>
     <string name="action_cancel">Cancel</string>
 
-    <string name="sort_dialog_most_popular">Most Popular</string>
-    <string name="sort_dialog_highest_rated">Highest Rated</string>
-    <string name="sort_dialog_most_rated">Most Rated</string>
+    <string name="sort_popular">popularity.desc</string>
+    <string name="sort_rated">Highest Rated</string>
 
     <string name="settings">Settings</string>
     <string name="toprated">TopRated</string>
+
     <string name="sort">sort</string>
 </resources>
