--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="movie_poster">Movie Poster</string>
     <string name="movie_title">Movie Title</string>
     <string name="overview">Overview</string>
+    <string name="reviews">Reviews</string>
 </resources>
