Trailers now showing
Signed-off-by: Emmaunel <aadewale123@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <string name="reviews">Reviews</string>
     <string name="navigation_item_explore">Explore</string>
     <string name="navigation_item_favorites">Favorites</string>
+    <string name="trailers">Trailers</string>
 
 </resources>
